--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <link rel="stylesheet" href="style.css">
-        <title>Project First</title>
+        <title>Coastline Travel Agency</title>
         <style>
             /* -------------------------ABOUT PAGE STARTS------------------ */
     #part-1{
