--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <link rel="stylesheet" href="css/style.css">
-        <title>Project First</title>
+       <link rel="stylesheet" href="style.css">
+        <title>Coastline Travel Agency</title>
         <style>
 
     @media (min-width:320px) and (max-width:480px){
