--- a/contact.html
+++ b/contact.html
@@ -226,7 +226,7 @@
         <!-- ------------------------------PART-2 STARTS--------------------- -->
         <div id="address">
             <div class="address-content">
-                <img class="cImg" src="img/placeholder.png" alt="address">
+                <img class="cImg" src="placeholder.png" alt="address">
                 <h2 class="cHead">ADDRESS</h2>
                 <a class="cLink" href="#">#245 Industrial Phase-2 ,<br>
                     Chandigarh
@@ -234,20 +234,20 @@
             </div>
 
             <div class="address-content">
-                <img class="cImg" src="img/call.png" alt="Call">
+                <img class="cImg" src="call.png" alt="Call">
                 <h2 class="cHead">PHONES</h2>
                 <a class="cLink" href="#">1-800-6543-765<br> 1-800-3434-876
                 </a>
             </div>
 
             <div class="address-content">
-                <img class="cImg" src="img/email.png" alt="Mail">
+                <img class="cImg" src="email.png" alt="Mail">
                 <h2 class="cHead" >E-MAIL</h2>
                 <a class="cLink" href="#">mail@randomlink.org</a>
             </div>
 
             <div class="address-content">
-                <img class="cImg" src="img/working-hours.png" alt="address">
+                <img class="cImg" src="working-hours.png" alt="address">
                 <h2 class="cHead">OPENING HOURS</h2>
                 <a class="cLink" href="#">Mon–Fri: 9:00 am–6:00 pm
                     <br>Sat–Sun: 11:00 am–4:00 pm
@@ -298,11 +298,11 @@
         <span class="footerLogo">Coastline</span><p class="footerLogo1">Travel Agency</p>      
         <p id="copyright">@2022 All Righy Are Reserved. Designed by Poonam Bharara</p>
         <div id="icons">
-            <span><img class="icon" src="img/facebook.png" alt="facebook img"></span>
-            <span><img class="icon" src="img/instagram.png" alt="instagram img"></span>
-            <span><img class="icon" src="img/linkedin.png" alt="linkedin img"></span>
-            <span><img class="icon" src="img/youtube.png" alt="linkdin img"></span>
-            <span><img class="icon" src="img/twitter.png" alt="twitter img"></span>
+            <span><img class="icon" src="facebook.png" alt="facebook img"></span>
+            <span><img class="icon" src="instagram.png" alt="instagram img"></span>
+            <span><img class="icon" src="linkedin.png" alt="linkedin img"></span>
+            <span><img class="icon" src="youtube.png" alt="linkdin img"></span>
+            <span><img class="icon" src="twitter.png" alt="twitter img"></span>
         </div> 
     </footer>
     <!---- ---------------------FOOTER ENDS---------------------- -->
